# graduation-design-saas-backend

./: .env  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  tmp.py
api/: __init__.py  deps.py
api/api_v1/endpoint/: admin.py  auth.py  dashboard.py  lesson.py  oss.py  public.py
core/: classroom.py  config.py  dynamic.py  oss.py  security.py
crud/: base.py  crud_admin.py  crud_class.py  crud_clr.py  crud_cs.py  crud_dynamic.py  crud_lesson.py  crud_lr.py  crud_option.py  crud_profession.py  crud_sts.py  crud_student.py  crud_task.py  crud_teacher.py
db/: database.py  init_db.py  oss.py  redis.py  session.py
models/: admin.py  base_class.py  class_.py  class_lesson_relation.py  cloud_share.py  dynamic.py  lesson.py  lesson_record.py  option.py  profession.py  student.py  student_task_status.py  task.py  teacher.py  the_class.py
schemas/: __init__.py  admin.py  class_.py  cloud_share.py  dynamic.py  lesson.py  lesson_record.py  option.py  profession.py  student.py  student_task_status.py  task.py  teacher.py  the_class.py
